--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -9,6 +9,8 @@ jobs:
 
   qt-for-linux:
     runs-on: ubuntu-latest
+    env:
+      QT_DIR: ${{ github.workspace }}/Qt
     steps:
 
     - name: Linux prerequisites 
