--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -8,7 +8,7 @@ env:
 jobs:
 
   qt-for-linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       QT_DIR: ${{ github.workspace }}/Qt
     steps:
