--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -128,6 +128,12 @@ jobs:
         fetch-depth: 0
         path: .
 
+    - name: check fxc.exe
+      run: |
+        $WinSdkPath = & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -prerelease -requires Microsoft.VisualStudio.Component.Windows10SDK -property installationPath
+        $WinSdkBin = "${WinSdkPath}\VC\Tools\MSVC\*\bin\Hostx64\x64"
+        dir "${WinSdkPath}\VC\Tools\MSVC\"
+
     - name: Patch
       run: |
         cd C:\qt5
