--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -112,6 +112,13 @@ jobs:
         choco uninstall mingw --force
         choco install mingw --x64 --version=8.1.0 
 
+    - name: check fxc.exe
+      run: |
+        $WinSdkPath = & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -prerelease -requires Microsoft.VisualStudio.Component.Windows10SDK -property installationPath
+        $WinSdkBin = "${WinSdkPath}\VC\Tools\MSVC\*\bin\Hostx64\x64"
+        dir "${WinSdkPath}\VC\Tools\MSVC\14.29.30133"
+        dir "${WinSdkPath}\VC\Tools\MSVC\14.43.34808"
+
     - name: Download Source
       shell: cmd
       run: |
@@ -127,12 +134,6 @@ jobs:
         repository: ''
         fetch-depth: 0
         path: .
-
-    - name: check fxc.exe
-      run: |
-        $WinSdkPath = & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -prerelease -requires Microsoft.VisualStudio.Component.Windows10SDK -property installationPath
-        $WinSdkBin = "${WinSdkPath}\VC\Tools\MSVC\*\bin\Hostx64\x64"
-        dir "${WinSdkPath}\VC\Tools\MSVC\"
 
     - name: Patch
       run: |
