--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -112,13 +112,6 @@ jobs:
         choco uninstall mingw --force
         choco install mingw --x64 --version=8.1.0 
 
-    - name: check fxc.exe
-      run: |
-        $WinSdkPath = & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -prerelease -requires Microsoft.VisualStudio.Component.Windows10SDK -property installationPath
-        $WinSdkBin = "${WinSdkPath}\VC\Tools\MSVC\*\bin\Hostx64\x64"
-        dir "${WinSdkPath}\VC\Tools\MSVC\14.29.30133"
-        dir "${WinSdkPath}\VC\Tools\MSVC\14.43.34808"
-
     - name: Download Source
       shell: cmd
       run: |
@@ -147,7 +140,7 @@ jobs:
     - name: Build
       run: |
         $WinSdkPath = & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -prerelease -requires Microsoft.VisualStudio.Component.Windows10SDK -property installationPath
-        $WinSdkBin = "${WinSdkPath}\VC\Tools\MSVC\*\bin\Hostx64\x64"
+        $WinSdkBin = "${WinSdkPath}\VC\Tools\MSVC\14.43.34808\bin\Hostx64\x64"
         echo "Adding Windows SDK bin path: $WinSdkBin"
         echo "$WinSdkBin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
         mkdir C:\qt5_shadow
