--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -119,6 +119,9 @@ jobs:
         dir "${WinSdkPath}\VC\Tools\MSVC\14.43.34808\bin"
         dir "${WinSdkPath}\VC\Tools\MSVC\14.43.34808\bin\Hostx64"
         dir "${WinSdkPath}\VC\Tools\MSVC\14.43.34808\bin\Hostx64\x64"
+        dir "${WinSdkPath}\VC\Tools\MSVC\14.29.30133\bin"
+        dir "${WinSdkPath}\VC\Tools\MSVC\14.29.30133\bin\Hostx64"
+        dir "${WinSdkPath}\VC\Tools\MSVC\14.29.30133\bin\Hostx64\x64"
 
     - name: Download Source
       shell: cmd
