--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -118,11 +118,9 @@ jobs:
         dir "${WinSdkPath}\VC\Tools\MSVC\14.29.30133\bin\Hostx64"
         dir "${WinSdkPath}\VC\Tools\MSVC\14.29.30133\bin\Hostx64\x64"
         dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10"
-        dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\Bin"
-        dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\Bin\x86"
-        dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\8.1"
-        dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\8.1\Bin"
-        dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\8.1\Bin\x86"
+        dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\Bin\10.0.26100.0"
+        dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\Bin\x64"
+        dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\Bin\x64\bin"
     
     - name: Install correct version of Environment
       run: |
