--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -115,6 +115,11 @@ jobs:
     #     dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10"
     #     dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\Bin\10.0.26100.0"
     #     dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64"
+
+    - name: check PATH
+      run: |
+        echo "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64" >> $env:GITHUB_PATH
+        echo %PATH%
     
     - name: Install correct version of Environment
       run: |
@@ -148,9 +153,7 @@ jobs:
 
     - name: Build
       run: |
-        $WinSdkBin = "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64"
-        echo "Adding Windows SDK bin path: $WinSdkBin"
-        echo "$WinSdkBin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8
+        echo "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64" >> $env:GITHUB_PATH
         mkdir C:\qt5_shadow
         cd C:\qt5_shadow
         ..\qt5\configure.bat -platform win32-g++ -prefix "D:\\qt5" -datadir "D:\\qt5\\share\\qt5" -archdatadir "D:\\qt5\\share\\qt5" -examplesdir "D:\\qt5\\share\\qt5\\examples" -testsdir "D:\\qt5\\share\\qt5\\tests" -opengl desktop -release -opensource -confirm-license -static -static-runtime -no-jasper -no-mng -D "JAS_DLL=0" -no-openssl -nomake tests -nomake examples -no-icu -no-fontconfig -schannel -dbus -qt-freetype -qt-pcre -qt-libpng -qt-libjpeg -qt-harfbuzz -qt-assimp -qt-doubleconversion -qt-tiff -qt-webp -no-iconv -no-gstreamer -no-wmf -feature-relocatable -no-sql-ibase -no-sql-mysql -no-sql-odbc -no-sql-psql -no-sql-sqlite2 -sql-sqlite -qt-sqlite -skip qttools -skip qtandroidextras -skip qtmacextras -skip qtwayland -skip qtwebchannel -skip qtwebengine -skip qtwebview
