--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -118,7 +118,7 @@ jobs:
 
     - name: add PATH
       run: |
-        echo "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64" >> $GITHUB_PATH
+        echo "PATH=$env:path;C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64" >> "${GITHUB_ENV}"
 
     - name: check PATH
       run: |
