--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -108,28 +108,8 @@ jobs:
     runs-on: windows-latest
     steps:
 
-    # - name: check fxc.exe
-    #   run: |
-    #     $WinSdkPath = & "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe" -latest -prerelease -requires Microsoft.VisualStudio.Component.Windows10SDK -property installationPath
-    #     $WinSdkBin = "${WinSdkPath}\VC\Tools\MSVC\*\bin\Hostx64\x64"
-    #     dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10"
-    #     dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\Bin\10.0.26100.0"
-    #     dir "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64"
-
-    # - name: add PATH
-    #   run: |
-    #     echo "PATH=$env:path;C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64" >> "${GITHUB_ENV}"
-
-    # - name: check PATH
-    #   run: |
-    #     echo $env:path
-
     - name: Add Windows SDK path to PATH
-      run: echo "PATH=$PATH:C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64" >> $GITHUB_ENV
-      shell: bash
-    
-    - name: Check PATH
-      run: echo $PATH
+      run: echo "PATH=$PATH:/C/PROGRAM FILES (X86)/WINDOWS KITS/10/BIN/10.0.26100.0/X64" >> $GITHUB_ENV
       shell: bash
     
     - name: Install correct version of Environment
@@ -164,7 +144,6 @@ jobs:
 
     - name: Build
       run: |
-        echo "C:\PROGRAM FILES (X86)\WINDOWS KITS\10\BIN\10.0.26100.0\X64" >> $env:GITHUB_PATH
         mkdir C:\qt5_shadow
         cd C:\qt5_shadow
         ..\qt5\configure.bat -platform win32-g++ -prefix "D:\\qt5" -datadir "D:\\qt5\\share\\qt5" -archdatadir "D:\\qt5\\share\\qt5" -examplesdir "D:\\qt5\\share\\qt5\\examples" -testsdir "D:\\qt5\\share\\qt5\\tests" -opengl desktop -release -opensource -confirm-license -static -static-runtime -no-jasper -no-mng -D "JAS_DLL=0" -no-openssl -nomake tests -nomake examples -no-icu -no-fontconfig -schannel -dbus -qt-freetype -qt-pcre -qt-libpng -qt-libjpeg -qt-harfbuzz -qt-assimp -qt-doubleconversion -qt-tiff -qt-webp -no-iconv -no-gstreamer -no-wmf -feature-relocatable -no-sql-ibase -no-sql-mysql -no-sql-odbc -no-sql-psql -no-sql-sqlite2 -sql-sqlite -qt-sqlite -skip qttools -skip qtandroidextras -skip qtmacextras -skip qtwayland -skip qtwebchannel -skip qtwebengine -skip qtwebview
