--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -85,7 +85,19 @@ jobs:
         curl -L "https://codereview.qt-project.org/gitweb?p=qt/qtbase.git;a=patch;h=cdf64b0e47115cc473e1afd1472b4b09e130b2a5" -o cdf64b0.diff
         patch -p1 < ./cdf64b0.diff
         cd ..
-        ./configure -static -release -prefix ${{ github.workspace }}/Qt -platform macx-clang -skip qtandroidextras -skip qtwayland -skip webengine -skip qtwinextras -skip qtx11extras -nomake tests -nomake examples -opensource -confirm-license -c++std c++17
+        ./configure \
+          -prefix ${{ github.workspace }}/Qt -platform macx-clang \
+          -static \
+          -release \
+          -opensource \
+          -confirm-license \
+          -skip qtandroidextras \
+          -skip qtwayland \
+          -skip webengine \
+          -skip qtwinextras \
+          -skip qtx11extras \
+          -nomake tests \
+          -nomake examples
         cmake --build . --parallel "$(sysctl -n hw.ncpu)"
         cmake --install .
         rm -fr ${{ github.workspace }}/qt5
