--- a/.github/workflows/qt.yml
+++ b/.github/workflows/qt.yml
@@ -77,7 +77,7 @@ jobs:
 
     - name: macOS prerequisites
       run: |
-        brew install cmake ninja llvm
+        brew install cmake ninja
 
     - name: Build Qt
       run: |
@@ -100,8 +100,8 @@ jobs:
           -skip qtx11extras \
           -nomake tests \
           -nomake examples
-        sudo cmake --build . --parallel "$(sysctl -n hw.ncpu)"
-        sudo cmake --install .
+        cmake --build . --parallel "$(sysctl -n hw.ncpu)"
+        cmake --install .
         rm -fr ${{ github.workspace }}/qt5
 
     - name: Package
